# build-universe

./: .gitignore  CATALOG.json  CHANGELOG.md  ENGINEERING.md  LINEAGE.md  README.md  STATUS.md  UNIVERSE.toml  build.bld  main.bld  test_simple.bld
aces/: aces_reshade.fx  color_pipeline.bld  color_pipeline.c  rrt.bld  rrt.c
axiom/: lib.bld  lib.quanta
bench/: lib.bld
benchmarks/: universe_benchmarks.bld
buildos/: STATUS.md
calibrate/: LICENSE  README.md  advanced_verification.py  calibrate_monitors.py  lib.bld  main.bld  neuralux_precision.py  pyproject.toml  test_full_workflow.py  verify_calibration.py
chromatic/: lib.bld
cli/: lib.bld
config/: lib.bld
debug/: lib.bld
delta/: lib.bld
docs/: COHERENCE-MEMBRANE.md  HEATMAP-AND-ACTION-PLAN.md  index.html  lib.bld
entangle/: lib.bld
entropy/: lib.bld
examples/: sync_platform.bld  trading_bot.bld
fmt/: lib.bld
forge/: lib.bld
foundation/: cli.bld  collections_advanced.bld  compression.bld  concurrency.bld  crypto.bld  encoding.bld  error.bld  fmt.bld  fs.bld  io_extended.bld  itertools.bld  lib.bld  lib.bld.bak  logging.bld  math_extended.bld  net.bld  process.bld  random.bld  regex.bld  testing.bld  text.bld  time.bld  uuid.bld
lsp/: lib.bld
lumina/: bloom.bld  dof.bld  lib.bld
neutrino/: lib.bld  nerf.bld
nexus/: api.bld  assets.bld  diagnostics.bld  lib.bld  loader.bld  networking.bld  persistence.bld  profiles.bld  scripting.bld  ui.bld
nova/: lib.bld
oracle/: automl.bld  causal.bld  changepoint.bld  features.bld  lib.quanta
photon/: lib.bld  (+11 more)
quantaos/bootloader/: Cargo.toml
(+390 files in other folders)
